<resources>
    <string name="app_name">Flights</string>
    <string name="no_flights_found">No Flights found for the selected dates.</string>
    <string name="start_date">Start Date\n%1$s</string>
    <string name="end_date">End Date\n%1$s</string>
    <string name="unknown_exception_please_try_again">Unknown exception please try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">no data</string>
    <string name="choose_departure">choose departure location</string>
    <string name="choose_arrival">choose arrival location</string>
    <string name="choose_departure_date">Select date</string>
    <string name="choose_arrival_date">Select date</string>
    <string name="select_start_date_first">Please select the start date first.</string>
    <string name="search">Search</string>


    <string name="currency_usd">USD</string>
    <string name="price_value">0.00</string>
    <string name="not_found_airport_error_msg">Not found any airport for departure or arrival</string>
    <string name="select_date_from">Select from</string>
    <string name="select_date_to">Select to</string>
    <string name="sort">Sort</string>
    <string name="departure_time_ascending">Departure Time ascending</string>
    <string name="departure_time_descending">Departure Time descending</string>
    <string name="price_from_h">Price: From high to low</string>
    <string name="price_from_l">Price: From low to High</string>
    <string name="recommended">Recommended</string>
    <string name="try_again">Try again</string>
    <string name="please_fill_departure_field">Please fill departure field</string>
    <string name="please_fill_arrival_field">Please fill arrival field</string>
    <string name="please_select_from_date">Please select from date</string>
    <string name="please_select_to_date">Please select to date</string>

</resources>