<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlDeparture"
            style="@style/myTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/choose_departure"
            app:errorEnabled="false"
            app:startIconDrawable="@drawable/ic_departure">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/atDeparture"
                style="@style/myTextInputEdit"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center|start"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlArrival"
            style="@style/myTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/choose_arrival"
            app:errorEnabled="false"
            app:startIconDrawable="@drawable/ic_arrival">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/atArrival"
                style="@style/myTextInputEdit"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center|start"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dateFromBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/select_date_from"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_date"
                app:iconGravity="start"
                app:iconPadding="10dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/dateToBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/select_date_to"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_date"
                app:iconGravity="start"
                app:iconPadding="10dp" />


        </LinearLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:insetTop="2dp"
                android:insetBottom="2dp"
                android:minHeight="45dp"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:elevation="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sortBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:insetTop="2dp"
                android:insetBottom="2dp"
                android:minHeight="45dp"
                android:text="@string/sort"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:cornerRadius="10dp"
                app:elevation="0dp"
                app:icon="@drawable/baseline_sort_24"
                app:iconPadding="0dp"
                tools:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFlights"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/flight_adapter_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circleLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/try_again"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorText"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Error"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
